--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "3001:3001"
     environment:
       - NODE_ENV=production
+      - NEST_PUBLIC_API_BASE_URL=${NEST_PUBLIC_API_BASE_URL:-http://localhost:3000}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:3001}
     env_file:
       - .env
     restart: unless-stopped
